# network-dismantling

./: .gitignore  README.md  pyproject.toml
datasets/realworld/: advogato.nx.pkl.xz  arenas-meta.nx.pkl.xz  cfinder-google.nx.pkl.xz  cit-HepPh.nx.pkl.xz  corruption.nx.pkl.xz  dblp-cite.nx.pkl.xz  dimacs10-celegansneural.nx.pkl.xz  dimacs10-polblogs.nx.pkl.xz  douban.nx.pkl.xz  econ-wm1.nx.pkl.xz  ego-twitter.nx.pkl.xz  email-EuAll.nx.pkl.xz  eu-powergrid.nx.pkl.xz  foodweb-baydry.nx.pkl.xz  foodweb-baywet.nx.pkl.xz  gridkit-eupowergrid.nx.pkl.xz  gridkit-north_america.nx.pkl.xz  inf-USAir97.nx.pkl.xz  internet-topology.nx.pkl.xz  librec-ciaodvd-trust.nx.pkl.xz  librec-filmtrust-trust.nx.pkl.xz  linux.nx.pkl.xz  loc-brightkite.nx.pkl.xz  london_transport_multiplex_aggr.nx.pkl.xz  maayan-Stelzl.nx.pkl.xz  maayan-figeys.nx.pkl.xz  maayan-foodweb.nx.pkl.xz  maayan-vidal.nx.pkl.xz  moreno_crime_projected.nx.pkl.xz  moreno_propro.nx.pkl.xz  moreno_train_train.nx.pkl.xz  munmun_digg_reply_LCC.nx.pkl.xz  opsahl-openflights.nx.pkl.xz  opsahl-powergrid.nx.pkl.xz  opsahl-ucsocial.nx.pkl.xz  oregon2_010526.nx.pkl.xz  p2p-Gnutella06.nx.pkl.xz  p2p-Gnutella31.nx.pkl.xz  pajek-erdos.nx.pkl.xz  petster-hamster.nx.pkl.xz  (+9 more)
docs/: requirements.txt
docs/source/: conf.py  index.rst
examples/: heuristic.py  nn.py
network_dismantling/: __init__.py  dismantler.py  selector.py
network_dismantling/dismanlter/: dismantler.py
network_dismantling/dismantler/: __init__.py  dismantler.py
network_dismantling/edge_selectors/: __init__.py  edge_selector.py
scripts/: converter.py
(+48 files in other folders)
