[tool.poetry]
name = "network-dismantling"
version = "0.0.1"
description = "Network Dismanling is a Network Dismantling Task Aimedextension library"
authors = ["Command <me@c0mm4nd.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^3.3"

[tool.poetry.group.dev.dependencies]
black = "*"
mypy = "*"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
sphinx-autoapi = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
